# StereoCamera

./: .gitignore  CMakeLists.txt  README.md  Stereo.sln  nuget.config
Build-Onboard/: CMakeCache.txt  Makefile  a.out  cmake_install.cmake
Stereo/: .Stereo.cpp.swp  ColorImg.cpp  ColorImg.h  DepthImg.cpp  DepthImg.h  Device.cpp  Device.h  Image.cpp  Image.h  NanoDet.cpp  NanoDet.h  Stereo.cpp  Stereo.vcxproj  Stereo.vcxproj.filters  Utility.cpp  Utility.h  main.cpp  nanodet.cpp  nanodet.h  packages.config  stdafx.h
Stereo/x64/Debug/: Stereo.exe.recipe  vc142.idb
Stereo/x64/Debug/Stereo.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Stereo.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Windows-CPP/: ColorImg.cpp  ColorImg.h  DepthImg.cpp  DepthImg.h  Device.cpp  Device.h  Stereo.cpp
eSPDI_DM/include/: PDI_DM.h  eSPDI_Common.h  eSPDI_ErrCode.h
eSPDI_DM/x64/: eSPDI_DM.lib
include/eSPDI/linux/: eSPDI.h  eSPDI_def.h  eSPDI_version.h
include/eSPDI/win/: eSPDI_Common.h
x64/Debug/: Stereo.ilk
